--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="./dist/main.css/main.css">
 </head>
 <body>
-    <h1>Olá</h1>
+    <section class="hero">
+        <div class="hero__content">
+            <h1 class="hero__content__branding">
+                <img src="./src/images/disneyplus.svg" alt="Disney+">
+            </h1>
+            <h3 class="title--small">
+                As melhores histórias em um só lugar.
+            </h3>
+            <p>
+                <a href="#" class="link-text">Assinar o Disney+</a>
+                <br>
+                <span class="text">
+                    R$ 27,90/mês o R$ 279,00/ano à vista*
+                </span>
+            </p>
+        </div>
+    </section>
 </body>
 </html>
