--- a/index.html
+++ b/index.html
@@ -7,11 +7,26 @@
     <link rel="stylesheet" href="./dist/main.css/main.css">
 </head>
 <body>
-    <section class="hero">
-        <div class="hero__content">
-            <h1 class="hero__content__branding">
+    <header class="header">
+        <div class="header_container">
+            <h1 class="header__logo ">
                 <img  src="./src/images/disneyplus.svg" alt="Disney+">
             </h1>
+            <ul class="header__links ">
+                <li class="header__links__item ">
+                    <a href="#" class="button button--secondary">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a href="#" class="button button--dark">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="hero__content">
+            <div class="hero__content__branding">
+                <img  src="./src/images/disneyplus.svg" alt="Disney+">
+            </div>
             <h3 class="title--small">
                 As melhores histórias em um só lugar.
             </h3>
@@ -25,12 +40,12 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - star+ - combo+">
-                    <button class="button">Assine agora.</button>
+                    <button class="button">Assine agora</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
                     <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - star+ - combo+">
-                    <button class="button">Assine agora.</button>
+                    <button class="button">Assine agora</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
             </ul>
@@ -144,6 +159,148 @@
             *O preço pode variar caso a assinatura tenha sido feita em outras plataformas.
         </p>
     </section>
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Imagem com tv,computador, tablet e celular">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito</h2>
+            <p class="text--big">Aproveite a tela grande da Tv ou assista no tablet, laptop , celular e outros aparelhos. Nossa seleção de títulos em 4k não para de crescer. Além disso ,para a felicidade de todos, é possivel assistir em até 4 telas ao mesmo tempo.</p>
+        </div>
+    </section>
+    <section class="image-text-section image-text-section--image-full-width">
+        <picture>
+            <source media="(max-width: 768px0)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
+            <img src="./dist/images/fundo_rei_leao.png" alt="Rei leão">
+        </picture>
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe filmes e séries</h2>
+            <p class="text--big">Baixe e assista onde e quando quiser. Assim , seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="available-devices_list">
+            <li class="available-devices_list_item">
+                <img src="./dist/images/dispositivos/computador.png" alt="computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrome Os</li>
+                    <li>MacOs</li>
+                    <li>Pc Windows</li>
+                </ul>
+            </li>
+            <li class="available-devices_list_item">
+                <img src="./dist/images/dispositivos/tv.png" alt="tv">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+            <li class="available-devices_list_item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Video games">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>Ps4</li>
+                    <li>Ps5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+            <li class="available-devices_list_item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Celulares">
+                <h4 class="title--small">Celulares e Tablets</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Android</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section class="faq">
+        <h2 class="title">Perguntas frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions_item">
+                <div class="faq__questions_item_question" data-faq-question>
+                    O que está incluido no Disney+?
+                </div>
+                <div class="faq__questions_item_answer  text--big">
+                    <p>• Estreias de filmes, séries originais e clássicos da Disney, Pixar, Marvel, Star Wars, National Geographic e Star.</p>
+                    <p>• Os torneios mais importantes do mundo e programas da ESPN ao vivo</p>
+                    <p>• Até quatro telas ao mesmo tempo com o Disney+ Premium, e até duas com o Disney+ Padrão.</p>
+                    <p>• Downloads, criação de perfis e controle parental para personalizar a experiência por idade, de acordo com o seu plano.</p>
+                </div>
+            </li>
+            <li class="faq__questions_item  ">
+                <div class="faq__questions_item_question" data-faq-question>
+                    Quais formas de pagamento posso usar ?
+                </div>
+                <div class="faq__questions_item_answer  text--big">
+                    <p>Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple, Mercado Livre e provedores locais de TV, telefonia e internet.</p>
+                </div>
+            </li>
+            <li class="faq__questions_item">
+                <div class="faq__questions_item_question" data-faq-question>
+                    Onde posso assistir ao disney+ ?
+                </div>
+                <div class="faq__questions_item_answer  text--big">
+                    <p>O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a lista completa de dispositivos compatíveis na Central de Ajuda. </p>
+                </div>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="disney+">
+            <ul class="footer_links">
+                <li class="footer_links_item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="globo">
+                        <select > 
+                            <option>English</option>
+                            <option selected > Português</option>
+                        </select>
+                    </div>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">Termos e condições de uso</a>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">Politica de privacidade</a>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">proteção de dados do Brasil</a>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">Anuncios personalizados </a>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">Dispositivos compatíveis</a>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">Ajuda</a>
+                </li>
+                <li class="footer_links_item">
+                    <a href="" class="text--small">Sobre o Disney+</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                © 2025 Disney e suas empresas afiliadas. Todos os direitos reservados.
+            </p>
+            <p class="text--small">
+                A programação do conteúdo esportivo varia de acordo com o plano. Para usar o Disney+, é necessário ser assinante e ter mais de 18 anos de idade.<br> Conteúdo sujeito a disponibilidade.
+                O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda.<br>, World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+            </p>
+        </div>
+    </footer>
+
     <script src="./src/main.js"></script>
 </body>
 </html>
